# mitra

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.agents/: CONTEXT.md
.agents/scripts/: validate_tool_call.py
.agents/skills/crisis_escalation/: SKILL.md
.agents/skills/daily_checkin/: SKILL.md
.agents/skills/risk_scoring/: SKILL.md
.agents/skills/selfcare_recommendations/: SKILL.md
.agents/skills/stride-threat-model/: SKILL.md
.gemini/config/: mcp_config.json
.semgrep/: rules.yaml
app/: agent.py  config.py  core.py  fast_api_app.py
docs/: index.html
mcp_servers/: signal_store.py  who_resources.py
specs/: bdd_scenarios.md  mitra_spec.md
tests/eval/: eval_config.yaml
tests/eval/datasets/: basic-dataset.json
tests/unit/: test_crisis_escalation.py  test_risk_scoring.py  test_security.py
