[project]
name = "mitra"
version = "1.0.0"
description = "Mitra — Global Mental Health Early Warning Agent"
requires-python = ">=3.8"
dependencies = [
    "pytest>=8.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
adk = [
    "google-adk>=2.0.0a0",
    "google-genai>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]
dev = [
    "semgrep>=1.60.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
